web-app/css/main.css
/* ... */
.input-colors + span {
    color: #869FB1;
}

.input-colors + span:hover,
.input-colors.input-error + span:hover {
    color: #206E9F;
}

.input-colors:focus + span {
    color: #206E9F;
}

.input-colors + span:disabled {
    color: #C2CFD8;
}

.input-colors.input-error + span {
    color: #CD3B3E;
}

.input-colors.input-error:focus + span {
    color: #206E9F;
}


.pi-modal-divider{
    width: 100%;
    height: 1px;
}

.pi-modal-divider span {
    border-bottom: 1px solid #BEC5CB;
    width: 895px;
    float: left;
    margin-top: 1em;
    margin-bottom: 1px;
    margin-left: -1.5em;
}

.input-field-label {
    padding: 0.875em 0em;
    margin: 0px;
    font-weight: bold;
    color: #333
}

.rout-num-lbl {
    max-width: 90%;
}

.field-error {
    color: #CD3B3E;
}

.error-font-size {
    font-weight: normal;
}

.text-input-field {
    border-radius: 4px;
    background-color: #fff;
    border:1px solid #869FB1;
    box-shadow: 4px 4px #EDF3F6 inset;
    width: 100%;
    color: #869FB1;
}

input.hasMultiCalendarPicker.pi-date-input {
    font-weight: bold;
    border-radius: 4px;
    background-color: #fff;
    border: 1px solid #869FB1;
    box-shadow: 4px 4px #EDF3F6 inset;
    width: 100%;
    height: auto;
    color: #869FB1;
    padding: 1em .75em;
    line-height: 136%;
}

.text-input-field::-webkit-input-placeholder,
.pi-date-input::-webkit-input-placeholder { /* WebKit, Blink, Edge */
    color: #869FB1;
    font-weight: bold;
}
.text-input-field:-moz-placeholder,
.pi-date-input:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
   color: #869FB1;
   font-weight: bold;
   opacity:  1;
}
.text-input-field::-moz-placeholder,
.pi-date-input::-moz-placeholder { /* Mozilla Firefox 19+ */
   color: #869FB1;
   font-weight: bold;
   opacity:  1;
}
.text-input-field:-ms-input-placeholder,
.pi-date-input:-ms-input-placeholder { /* Internet Explorer 10-11 */
   color: #869FB1;
   font-weight: bold;
}

.dropdown .input-field-error,
.input-field-error,
.radio-txt-input.input-field-error,
input.hasMultiCalendarPicker.pi-date-input.input-error {
    background-color: #F6E5E6;
    border:1px solid #CD3B3E;
    box-shadow: 3px 3px #F0D3D3 inset;
    color: #CD3B3E;
}

.input-field-error::-webkit-input-placeholder,
.pi-date-input.input-error::-webkit-input-placeholder { /* WebKit, Blink, Edge */
    color: #CD3B3E;
    font-weight: bold;
}
.input-field-error:-moz-placeholder,
.pi-date-input.input-error:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
   color: #CD3B3E;
   font-weight: bold;
   opacity:  1;
}
.input-field-error::-moz-placeholder,
.pi-date-input.input-error::-moz-placeholder { /* Mozilla Firefox 19+ */
   color: #CD3B3E;
   font-weight: bold;
   opacity:  1;
}
.input-field-error:-ms-input-placeholder,
.pi-date-input.input-error:-ms-input-placeholder { /* Internet Explorer 10-11 */
   color: #CD3B3E;
   font-weight: bold;
}

.input-fail {
    position: absolute;
    float: right;
    right: 2.25em;
    top: 4.3em;
    background: #F6E5E6;
}

.icon .icon-error {
    font-size: 16px;
}

.amt-input-fail {
    position: absolute;
    float: right;
    left: 13.65em;
    top: 8.88em;
    background: #F6E5E6;
}

.existing-accts-old .amt-input-fail {
    position: relative;
    top: 0.15em;
    right: 2.25em;
    left: auto;
    float: none;
}

.desktop-listing .amt-input-fail {
    position: absolute;
    float: right;
    left: 13.1em;
    top: 6.35em;
    background: #F6E5E6;
}

.pct-input-fail {
    position: absolute;
    float: right;
    left: 13.65em;
    top: 11.2em;
    background: #F6E5E6;
}

.existing-accts-old .pct-input-fail {
    position: relative;
    top: 0.15em;
    right: 3.35em;
    left: auto;
    float: none;
}

.desktop-listing .pct-input-fail {
    position: absolute;
    float: right;
    left: 13.1em;
    top: 9em;
    background: #F6E5E6;
}

.icon-error.ellucian-font,
.icon-caret-down.ellucian-font {
    font-family: ellucian;
}

.text-input-field:focus,
input.hasMultiCalendarPicker.pi-date-input:focus,
.radio-txt-input:focus {
    border-style: solid;
    border-width: 1px;
    border-color: #206E9F;
    box-shadow: 0px 2px #CBE2E8 inset;
    color: #4F585F;
}

.dialog-hdr1 {
    font-size: 30px;
    margin: 0px;
    padding: 1em 1em 0.5em;
}

.pi-modal.modal {
    margin-top: 50px;
    overflow-x: hidden
}

.pi-modal .modal-dialog {
    padding: 0;
    height: 100%;
}

.pi-modal .modal-content {
    height: 100%;
    border-radius: 0px;
    overflow-y: auto;
}

p.response-err {
    padding-left: 15px;
    padding-right: 15px;
    float: left;
    clear: left;
}

.pad-dialog-lr.row {
    margin: 0px;
}

.dialog-footer-margin {
    margin-top: 1.5em;
}

.dialog-hdr2 {
    margin: 0px;
    float: right;
    width: 100%;
}

button.closebtn {
    color: #4f585f;
    opacity: 1;
    font-size: 14px;
    font-family: open-sans-semi-bold;
    background: url('../images/close.svg') 50% 50% no-repeat;
    padding: 2.85em;
    display: block;
    border: none;
    float: right;
}

.modal-footer-container {
    height: 100%;
}

.pi-modal-footer {
    display: table;
    padding: 1px 0px 0px;
    width: 100%;
}

.dialog-btn {
    box-sizing: border-box;
    display: table-cell;
    text-align: center;
    vertical-align: middle;
    font-size: 18px;
    overflow: auto;
    border-style: none;
    background: white;
    color: #206E9F;
    line-height: normal;
    padding: 1em;
}


.desktop-save .lbl-text {
    width: 98%;
    display: inline-block\9; /* \9 hack - make this IE only */
    line-height: 20px;
}

.one-btn-layout {
    width: 100%;
}

.two-btn-layout {
    width: 50%;
}

.cancel-btn {
    border-top: 1px solid #869FB1;
}

.cancel-btn.one-btn-layout {
    width: 0px;
    display: none;
}

.save-btn {
    border-top: 1px solid #206E9F;
    background: #206E9F;
    color: white;
    box-shadow: 0px -4px #0C5482 inset;
}

.save-btn[disabled] {
    color: #869FB1;
}
/* ... */

